fix overflown tables

--- a/resources/sass/app.css
+++ b/resources/sass/app.css
@@ -90,7 +90,7 @@ th {
 }
 
 td {
-	@apply px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 text-gray-500
+	@apply px-6 py-4 break-all border-b border-gray-200 text-sm leading-5 text-gray-500
 }
 
 fieldset {
